# knut

./: CMakeLists.txt
src/core/: qmldocument.cpp  qmldocument.h
test_data/projects/: CMakeLists.txt
